force-app/main/default/objects/SDOC__SDRelationship__c/SDOC__SDRelationship__c.object-meta.xml
<CustomObject>
    <description>S-Doc: Junction object that allows S-Docs to be related to multiple Salesforce objects</description>
    <label>SDoc Relationship</label>
    <nameField>
        <displayFormat>SDR-{000}</displayFormat>
        <label>Sdoc Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S-Docs Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>