force-app/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__SDoc_Rel_GD_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SDoc_Rel_GD_Status_Text__c</fullName>
    <label>Doc Link Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>