force-app/main/default/objects/SDOC__SDRelationship__c/validationRules/SDOC__GD_Link.validationRule-meta.xml
<ValidationRule>
    <fullName>SDOC__GD_Link</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(SDOC__SDoc_Rel_GD_Status__c, &apos;Linked to Google Doc&apos;)
, 
ISBLANK( SDOC__SDoc_Rel_GD_Link__c ) 
)</errorConditionFormula>
    <errorMessage>Before you are able to manually set the Docs Status to &quot;Linked to Google Doc&quot;, you must first enter a valid URL to an existing Google Doc in the Google Docs Link field.</errorMessage>
</ValidationRule>